# azdevops-tui

./: Cargo.toml  README.md
src/: azdevops.rs  main.rs  repos.rs
