[package]
name = "azdevops-tui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
azure_devops_rust_api = { version = "0.7.5", features = ["git"] }
azure_identity = "0.11.0"
dotenv = "0.15.0"
env_logger = "0.10.0"
tokio = { version = "1.0.28", features = ["full"] }
tui = "0.19.0"
